--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"LEGENDS_SMPDPP.aternos.me",
-	"port": "27211",
-	"name": "afkaccofJR"
+	"ip":"Survivors_SMP20.aternos.me",
+	"port": "45655",
+	"name": "MinicrafterAFK"
 }
