--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Survivors_SMP20.aternos.me",
-	"port": "45655",
-	"name": "Minicrafter28287"
+	"ip":"ult10.falix.gg",
+	"port": "26126",
+	"name": "OP_BOT"
 }
